Fix side menu last item not visible

--- a/src/views/SideMenu/style.scss
+++ b/src/views/SideMenu/style.scss
@@ -18,8 +18,8 @@
       display: flex;
       align-items: center;
       border-color: $border-color;
-      padding-top: 0.5rem;
-      padding-bottom: 0.7rem;
+      padding-top: 0.5rem !important;
+      padding-bottom: 0.7rem !important;
 
       .content {
         display: flex;
